add images for first slide

--- a/presentations/parallel_ex_unit/deck.html
+++ b/presentations/parallel_ex_unit/deck.html
@@ -19,14 +19,58 @@ class: center, middle, headline
 ---
 class: center, middle
 
-![](/assets/images/pattern_language.png)
-## Picture of four quadrents - cool/boring useful/useless
+![](/assets/images/useful_cool_1.jpg)
 
 ???
-* It's cool & useless
-* I love having useless trivia knowledge!
-* But every now and then, that useless knowledge can be extremely useful. It's rare, but it
-happens.
+
+---
+class: center, middle
+
+![](/assets/images/useful_cool_2.jpg)
+
+???
+
+---
+class: center, middle
+
+![](/assets/images/useful_cool_3.jpg)
+
+???
+
+---
+class: center, middle
+
+![](/assets/images/useful_cool_4.jpg)
+
+???
+
+---
+class: center, middle
+
+![](/assets/images/useful_cool_5.jpg)
+
+???
+
+---
+class: center, middle
+
+![](/assets/images/useful_cool_6.jpg)
+
+???
+
+---
+class: center, middle
+
+![](/assets/images/useful_cool_7.jpg)
+
+???
+
+---
+class: center, middle
+
+![](/assets/images/useful_cool_8.jpg)
+
+???
 
 ---
 class: center, middle
